@@ -1,9 +1,7 @@
 The files
 	zic.c zdump.c ialloc.c scheck.c tzfile.h
 	private.h tzselect.ksh checktab.awk
-come from the tzcode package by Arthur David Olson et.al.; the file
-	version.h
-has the contents that would be generated by that package's Makefile.
+come from the tzcode package by Arthur David Olson et.al.
 
 The files
 	africa antarctica asia australasia europe
