@@ -1,1 +1,0 @@
-static char const TZVERSION[]="tz2012i";
